--- a/bootloaders/encrypted/CMakeLists.txt
+++ b/bootloaders/encrypted/CMakeLists.txt
@@ -53,7 +53,7 @@ add_linker_script(enc_bootloader "0x20070000" "64k")
 pico_set_otp_key_output_file(enc_bootloader ${CMAKE_CURRENT_BINARY_DIR}/otp.json)
 
 # sign, hash, and clear SRAM
-pico_sign_binary(enc_bootloader ${CMAKE_CURRENT_LIST_DIR}/private.pem)
+pico_sign_binary(enc_bootloader)
 pico_hash_binary(enc_bootloader)
 pico_load_map_clear_sram(enc_bootloader)
 
@@ -87,7 +87,7 @@ pico_set_binary_type(hello_serial_enc no_flash)
 add_linker_script(hello_serial_enc "0x20000000" "448k")
 
 # sign, hash, and encrypt
-pico_sign_binary(hello_serial_enc ${CMAKE_CURRENT_LIST_DIR}/private.pem)
+pico_sign_binary(hello_serial_enc)
 pico_hash_binary(hello_serial_enc)
 pico_encrypt_binary(hello_serial_enc ${CMAKE_CURRENT_LIST_DIR}/privateaes.bin)
 
